--- a/html/index.html
+++ b/html/index.html
@@ -1,13 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Leonel Carrizo | Software Engineer</title>
 </head>
-<body>
-    
+
+<body class="main-content">
+    <!-- =================== HEADER================= -->
+    <header class="section sec1 header active">
+    </header>
+
+    <!-- ========= MAIN SECTIONS =============== -->
+    <main class="main">
+        <section class="section sec2 about"></section>
+        <section class="section sec3 portfolio"></section>
+        <section class="section sec4 blogs"></section>
+        <section class="section sec5 contact"></section>
+    </main>
+
+    <!--======== TOGGLE MENUS BUITTONS ===========-->
+    <div class="controls">
+        <div class="control control-1 active-btn">
+            <i class="fa-solid fa-house"></i>
+        </div>
+
+        <div class="control control-2 " data-id="about">
+            <i class="fas fa-user"></i>
+
+        </div>
+        <div class="control control-3 " data-id="portfolio">
+            <i class="fas fa-briefcase"></i>
+
+        </div>
+        <div class="control control-4 " data-id="blogs">
+            <i class="far fa-newspaper"></i>
+
+        </div>
+        <div class="control control-5 " data-id="contact">
+            <i class="fas fa-envelope-open"></i>
+
+        </div>
+    </div>
+
 </body>
+
 </html>
