--- a/html/index.html
+++ b/html/index.html
@@ -22,10 +22,10 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="../asset/image/picture-profile.jpeg" alt="Profile Picture">
+                    <img src="../asset/image/profile1.png" alt="Profile Picture">
                 </div>
             </div>
-
+            
             <!-- right header -->
             <div class="right-header">
                 <h1 class="name">
