update the screenshots

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!-- right header -->
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span class="name">Leonel Carrizo</span>
+                    Hi, I'm <span class="name">Your Name</span>
                     A Blablablaba balabla.
                 </h1>
                 <p>
