fix on link to file css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="../asset/image/profile1.png" alt="Profile Picture">
+                    <img src="./asset/image/profile1.png" alt="Profile Picture">
                 </div>
             </div>
             
@@ -262,7 +262,7 @@
                 <!-- Job 1 -->
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="../asset/image/Job-1.jpeg" alt="job 1">
+                        <img src="./asset/image/Job-1.jpeg" alt="job 1">
                     </div>
                     <div class="hover-item">
                         <h3>Projects Source</h3>
@@ -282,7 +282,7 @@
                 <!-- Job 2 -->
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="../asset/image/Job-2.jpeg" alt="job 2">
+                        <img src="./asset/image/Job-2.jpeg" alt="job 2">
                     </div>
                     <div class="hover-item">
                         <h3>Projects Source</h3>
@@ -302,7 +302,7 @@
                 <!-- Job 3 -->
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="../asset/image/Job-3.jpeg" alt="job 3">
+                        <img src="./asset/image/Job-3.jpeg" alt="job 3">
                     </div>
                     <div class="hover-item">
                         <h3>Projects Source</h3>
@@ -322,7 +322,7 @@
                 <!-- Job 4 -->
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="../asset/image/Job-4.jpeg" alt="job 4">
+                        <img src="./asset/image/Job-4.jpeg" alt="job 4">
                     </div>
                     <div class="hover-item">
                         <h3>Projects Source</h3>
@@ -342,7 +342,7 @@
                 <!-- JOb 5 -->
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="../asset/image/Job-5.jpeg" alt="job 5">
+                        <img src="./asset/image/Job-5.jpeg" alt="job 5">
                     </div>
                     <div class="hover-item">
                         <h3>Projects Source</h3>
@@ -362,7 +362,7 @@
                 <!-- Job 6 -->
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="../asset/image/Job-6.jpeg" alt="job 6">
+                        <img src="./asset/image/Job-6.jpeg" alt="job 6">
                     </div>
                     <div class="hover-item">
                         <h3>Projects Source</h3>
@@ -397,7 +397,7 @@
                 <div class="blogs">
                     <!-- blog 1 -->
                     <div class="blog">
-                        <img src="../asset/image/blog-1.jpg" alt="blog 1">
+                        <img src="./asset/image/blog-1.jpg" alt="blog 1">
                         <div class="blog-text">
                             <h4>
                                 How to create your onw
@@ -410,7 +410,7 @@
                     </div>
                     <!-- blog 2 -->
                     <div class="blog">
-                        <img src="../asset/image/blog-2.jpg" alt="blog 2">
+                        <img src="./asset/image/blog-2.jpg" alt="blog 2">
                         <div class="blog-text">
                             <h4>
                                 How to create something great
@@ -423,7 +423,7 @@
                     </div>
                     <!-- blog 3 -->
                     <div class="blog">
-                        <img src="../asset/image/blog-3.jpg" alt="blog 3">
+                        <img src="./asset/image/blog-3.jpg" alt="blog 3">
                         <div class="blog-text">
                             <h4>
                                 Other Blogs here
@@ -436,7 +436,7 @@
                     </div>
                     <!-- blog 4 -->
                     <div class="blog">
-                        <img src="../asset/image/blog-4.jpg" alt="blog 4">
+                        <img src="./asset/image/blog-4.jpg" alt="blog 4">
                         <div class="blog-text">
                             <h4>
                                 How to create your carrer
@@ -449,7 +449,7 @@
                     </div>
                     <!-- blog 5 -->
                     <div class="blog">
-                        <img src="../asset/image/blog-5.jpg" alt="blog 5">
+                        <img src="./asset/image/blog-5.jpg" alt="blog 5">
                         <div class="blog-text">
                             <h4>
                                 How to create other blog
@@ -462,7 +462,7 @@
                     </div>
                     <!-- blog 6 -->
                     <div class="blog">
-                        <img src="../asset/image/blog-6.jpg" alt="blog 6">
+                        <img src="./asset/image/blog-6.jpg" alt="blog 6">
                         <div class="blog-text">
                             <h4>
                                 Another One
@@ -625,7 +625,7 @@
     </div>
 
     <!-- ======= SCRIPT APP ========== -->
-    <script src="../js/app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
