--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <!-- Job 2 -->
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="./asset/image/Job-2.jpeg" alt="job 2">
+                        <img src="./asset/image/job-2.jpeg" alt="job 2">
                     </div>
                     <div class="hover-item">
                         <h3>Projects Source</h3>
@@ -322,7 +322,7 @@
                 <!-- Job 4 -->
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="./asset/image/Job-4.jpeg" alt="job 4">
+                        <img src="./asset/image/job-4.jpeg" alt="job 4">
                     </div>
                     <div class="hover-item">
                         <h3>Projects Source</h3>
@@ -342,7 +342,7 @@
                 <!-- JOb 5 -->
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="./asset/image/Job-5.jpeg" alt="job 5">
+                        <img src="./asset/image/job-5.jpeg" alt="job 5">
                     </div>
                     <div class="hover-item">
                         <h3>Projects Source</h3>
@@ -362,7 +362,7 @@
                 <!-- Job 6 -->
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="./asset/image/Job-6.jpeg" alt="job 6">
+                        <img src="./asset/image/job-6.jpeg" alt="job 6">
                     </div>
                     <div class="hover-item">
                         <h3>Projects Source</h3>
