--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <!-- Job 3 -->
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="./asset/image/Job-3.jpeg" alt="job 3">
+                        <img src="./asset/image/job-3.jpeg" alt="job 3">
                     </div>
                     <div class="hover-item">
                         <h3>Projects Source</h3>
